(executable
  (name ExampleExe)
  (public_name example)
  (package example)
  (ocamlc_flags -w -9-27)
  (ocamlopt_flags -w -9-27)
  (preprocess (pps brisk-reconciler.ppx))
  (libraries
    Revery
    timber
    boiler
  )
)

(install
  (package example)
  (section bin)
  (files
    Roboto-Regular.ttf
  )
)

(include_subdirs unqualified)
