(library
  (name Tests)
  (ocamlc_flags -w -9-27)
  (ocamlopt_flags -linkall -g -w -9-27)
  (libraries
    rely.lib
    boiler
  )
  (modules :standard \ TestExe)
)

(executable
  (name TestExe)
  (public_name test)
  (package test)
  (ocamlc_flags -w -9-27)
  (ocamlopt_flags -w -9-27)
  (libraries Tests)
  (modules TestExe)
)

(include_subdirs unqualified)
